@@ -1,3 +1,9 @@
+2009-06-11  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	* testsuite/libffi.call/cls_longdouble_va.c: Add xfail sh*-*-linux-*.
+	* testsuite/libffi.call/err_bad_abi.c: Add xfail sh*-*-*.
+	* testsuite/libffi.call/err_bad_typedef.c: Likewise.
+
 2009-06-08  Andrew Haley  <aph@redhat.com>
 
 	* testsuite/libffi.call/err_bad_abi.c: Add xfails.
